--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,9 @@ html {
     background-color: #004badd0;
   }
 }
+.countdown {
+  padding: 10px;
+  border: 5px solid #004badd0;
+  border-radius: 10px;
+  margin-bottom: -10px;
+}
